refactor, convert def endpoint to nio Paths